# snake-rs

./: .gitignore  Cargo.toml  README.md  scheme.uml
engine/: Cargo.toml
engine/shaders/: circle.frag  circle.vert  cube.frag  cube.vert
engine/src/: game.rs  lib.rs
engine/src/drw/: drawable.rs
engine/src/geom/: matrix.rs  mod.rs  shapes.rs
engine/src/geometry/: shapes.rs
engine/src/mv/: mod.rs  transform.rs
engine/src/mv/phys/: movement.rs
engine/src/res/: cache.rs
engine/src/shaders/: circle_shader.rs  cube_shader.rs  mod.rs
snake/: Cargo.toml
snake/src/: main.rs
src/: main.rs
src/geometry/: shapes.rs
src/mv/: transform.rs
