[package]
name = "snake-engine"
version = "0.1.0"
edition = "2024"

[dependencies.vulkano]
version = "0.35.2"

[dependencies]
vulkano-shaders = "0.35.0"
#png = "0.18"
log = "0.4"
pretty_env_logger = "0.5"
rapier2d = "0.32.0"
tracy-client = "0.18.4"

#[target.'cfg(unix)'.dependencies]
#rustix = "1.1.3"

[dependencies.winit]
version = "0.30.12"
features = ["rwh_06"]

[dependencies.anyhow]
version = "1.0"

#[dependencies.image]
#version = "0.25"

[profile.dev]
opt-level = 1 
