[package]
name = "snake-engine"
version = "0.1.0"
edition = "2024"

[dependencies.vulkano]
version = "0.35.2"

[dependencies]
vulkano-shaders = "0.35.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rapier2d = "0.32.0"
tracy-client = { version = "0.18.4", optional = true }
color = { version = "0.3.2", features = ["bytemuck"] }
strum = { version = "0.28", features = ["derive"] }

[dependencies.winit]
version = "0.30.12"
features = ["rwh_06"]

[dependencies.anyhow]
version = "1.0"

[profile.dev]
opt-level = 1 

[features]
default = []
tracing = ["dep:tracy-client"]
