[package]
name = "snake"
version = "0.1.0"
edition = "2024"

[dependencies]
snake-engine = { path = "../engine" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracy-client = "0.18.4"
rapier2d = "0.32.0"
color = { version = "0.3.2", features = ["bytemuck"] }

[dependencies.winit]
version = "0.30.12"
features = ["rwh_06"]
